tests/diag/type-mismatch-num.wisp
surface bar {
  widget clock {
    width = "wide";
  }
}
